--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "npm run start",
     "start": "webpack --config webpack.config.js",
+    "lint": "eslint --ext .js,.vue src",
     "dev": "webpack-dev-server --config config/webpack.dev.js --open",
     "pro": "webpack --config config/webpack.pro.js",
     "prebuild": "echo \" this is pre build \"",
@@ -15,16 +16,26 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-vue": "^7.0.0-alpha.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "style-loader": "^1.0.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.10",
+    "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.4.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
@@ -34,9 +45,9 @@
     "axios": "^0.19.0",
     "element-ui": "^2.8.0",
     "moment": "^2.24.0",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
-    "vue-loader": "^15.7.2",
-    "vue-router": "^3.1.3"
+    "vue-loader": "^15.9.2",
+    "vue-router": "^3.1.6"
   }
 }
