--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
+    "babel-plugin-component": "^1.1.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.8.0",
@@ -45,6 +46,7 @@
     "axios": "^0.19.0",
     "element-ui": "^2.8.0",
     "moment": "^2.24.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-loader": "^15.9.2",
