--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "手动c创建webpack练习",
   "main": "index.js",
   "scripts": {
-    "test": "npm run start",
+    "test": "standard",
     "start": "webpack --config webpack.config.js",
     "lint": "eslint --ext .js,.vue src",
     "dev": "webpack-dev-server --config config/webpack.dev.js --open",
     "pro": "webpack --config config/webpack.pro.js",
     "prebuild": "echo \" this is pre build \"",
     "build": "echo \" this is build \"",
-    "postbuild": "echo \" this is post build \""
+    "postbuild": "echo \" this is post build \"",
+    "server": "node server/server"
   },
   "author": "",
   "license": "ISC",
@@ -23,14 +24,16 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-vue": "^7.0.0-alpha.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "standard": "^14.3.4",
     "style-loader": "^1.0.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
@@ -44,7 +47,10 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "element-ui": "^2.8.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
