--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "standard",
     "start": "webpack --config webpack.config.js",
     "lint": "eslint --ext .js,.vue src",
-    "dev": "webpack-dev-server --config config/webpack.dev.js --open",
+    "dev": "webpack-dev-server --config config/webpack.dev.js",
     "pro": "webpack --config config/webpack.pro.js",
     "prebuild": "echo \" this is pre build \"",
     "build": "echo \" this is build \"",
@@ -37,6 +37,7 @@
     "style-loader": "^1.0.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "terser-webpack-plugin": "^3.0.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^3.4.0",
